BREAKING CHANGE: vue 2 migrated to vue 3 plusauth oidc client js added

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-VUE_APP_AUTH_URL=https://<YOUR_PLUSAUTH_TENANT_NAME>.plusauth.com/
+VUE_APP_OIDC_ISSUER=https://<YOUR_PLUSAUTH_TENANT_NAME>.plusauth.com/
 VUE_APP_CLIENT_ID=<YOUR_PLUSAUTH_CLIENT_ID>
-BASE_URL=http://localhost:8080/
+VUE_APP_BASE_URL=http://localhost:8080/
