refactor: upgrade dependencies

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-VUE_APP_OIDC_ISSUER=https://<YOUR_PLUSAUTH_TENANT_NAME>.plusauth.com/
-VUE_APP_CLIENT_ID=<YOUR_PLUSAUTH_CLIENT_ID>
+VITE_APP_OIDC_ISSUER=https://<YOUR_PLUSAUTH_TENANT_NAME>.plusauth.com/
+VITE_APP_CLIENT_ID=<YOUR_PLUSAUTH_CLIENT_ID>
