--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "start": "vite dev",
+    "build": "vite build"
   },
   "dependencies": {
     "@plusauth/plusauth-oidc-client-js": "^0.12.0",
-    "bootstrap": "^4.6.1",
-    "vue": "^3.2.26",
-    "vue-router": "^4.0.12"
+    "bootstrap": "^5.2.2",
+    "vue": "^3.2.40",
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
-    "@vue/cli-service": "^4.5.15",
-    "@vue/compiler-sfc": "^3.2.26"
+    "@vitejs/plugin-vue": "^3.1.2",
+    "vite": "^3.1.4"
   },
   "browserslist": [
     "> 1%",
